# metal-seed

./: .gitignore  CMakeLists.txt  readme.md
assets/: Info.plist  UIKitMain.storyboard
src/: Main.mm  Renderer.h  Renderer.mm
